<resources>
    <string name="app_name">ToDoXavierGwendoline</string>
    <string name="delete">Delete</string>
    <string name="check">check</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit">edit</string>
    <string name="choose_picture">Choisir une Image</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="uploading">Upload en cours…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Se connecter</string>
    <string name="signup_text">S\'inscrire</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="password_confirmation">Confirmer le mot de passe</string>
</resources>